# NarrAItive

./: .gitignore  README.md  narrAItive_duckDB.duckdb  narrAItive_duckDB_save.duckdb  pyproject.toml
notebooks/: Test.ipynb  copy_postgres_to_duckdb.ipynb
src/: ai_model_apis.py  aws_scripts.py  creds_aws.py  creds_db.py  openai_dall-e-3.py  process_media.py  prompt_templates.py  story_creating_utils.py
voice_input/: Faffi_Leseprobe_1.m4a  Faffi_Leseprobe_2.m4a  Faffi_Leseprobe_3.m4a  Faffi_Leseprobe_4.m4a  Faffi_Leseprobe_5.m4a
