[tool.poetry]
name = "narraitive"
version = "0.1.0"
description = ""
authors = ["Faffi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
duckdb = "^1.0.0"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
openai = "^1.40.2"
elevenlabs = "^1.13.3"
requests = "^2.32.3"
boto3 = "^1.34.157"
streamlit = "^1.37.1"
jupyter = "^1.0.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
